--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Jordan Wright</a>
+          <a class="navbar-brand" href="/">Aaron Bishop</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -53,8 +53,8 @@
 
     <div class="jumbotron">
       <div class="container" style="text-align:center;">
-        <img src="/images/jordan-wright.png" class="avatar"></img>
-        <h1>Hi there, I'm Jordan</h1>
+        <img src="/images/" class="avatar"></img>
+        <h1>Who am I again?</h1>
         <p>and I like security.</p>
       </div>
     </div>
