(Blog) - It's getting there
Slowly but surely ...

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="description" content="Aaron Bishop blog">
         <meta name="viewport" content="width=device-width">
 
-        <link rel="stylesheet" href="/css/bootstrap.css">
+        <link rel="stylesheet" href="/stylesheets/bootstrap.css">
         <style>
             body {
                 padding-top: 50px;
@@ -22,10 +22,10 @@
               -moz-border-radius:50%;
             }
         </style>
-        <link rel="stylesheet" href="/css/font-awesome.min.css">
-        <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="/stylesheets/font-awesome.min.css">
+        <link rel="stylesheet" href="/stylesheets/main.css">
 
-        <script src="/js/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+        <script src="/javascripts/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -43,9 +43,9 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/contact">Contact</a></li>
-            <li><a href="/blog">Blog</a></li>
-            <li><a href="/projects">Projects</a></li>
+            <li><a href="pages/contact">Contact</a></li>
+            <li><a href="pages/blog">Blog</a></li>
+            <li><a href="pages/projects">Projects</a></li>
           </ul>
         </div><!--/.navbar-collapse -->
       </div>
@@ -72,7 +72,7 @@
               Security
           </h2>
           <p>Hurrr</a></p>
-          <p><a class="btn btn-default" href="/blog">View blog &raquo;</a></p>
+          <p><a class="btn btn-default" href="pages/blog">View blog &raquo;</a></p>
         </div>
         <div class="col-lg-6">
           <h2><i class="icon-code icon-2x"></i>
@@ -80,7 +80,7 @@
             Open-Source Software</h2>
           </h2>
           <p>Durr</p>
-          <p><a class="btn btn-default" href="/projects">View projects &raquo;</a></p>
+          <p><a class="btn btn-default" href="pages/projects">View projects &raquo;</a></p>
        </div>
       </div>
 
