--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <div class="jumbotron">
       <div class="container" style="text-align:center;">
-        <img src="/images/" class="avatar"></img>
+        <img src="/images/moi.jpg" class="avatar"></img>
         <h1>Who am I again?</h1>
         <p>and I like security.</p>
       </div>
