--- a/index.html
+++ b/index.html
@@ -55,35 +55,10 @@
     <div class="jumbotron">
       <div class="container" style="text-align:center;">
         <img src="/images/moi.jpg" class="avatar"></img>
-        <h1>Who am I again?</h1>
+        <h1>Hi, my name's Aaron</h1>
         <p>and I like security.</p>
       </div>
     </div>
-
-    <div class="container">
-      <div style="text-align:center;" class="row">
-      <hr/>
-      <h1> Interests </h1>
-      <hr/>
-      </div>
-      <div  style="text-align:center;" class="row">
-        <div class="col-lg-6">
-          <h2><i class="icon-lock icon-2x"></i>
-            <br/>
-              Security
-          </h2>
-          <p>Hurrr</a></p>
-          <p><a class="btn btn-default" href="pages/blog">View blog &raquo;</a></p>
-        </div>
-        <div class="col-lg-6">
-          <h2><i class="icon-code icon-2x"></i>
-            </br>
-            Open-Source Software</h2>
-          </h2>
-          <p>Durr</p>
-          <p><a class="btn btn-default" href="pages/projects">View projects &raquo;</a></p>
-       </div>
-      </div>
 
       <hr>
 
