--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
+            <li><a href="pages/About">About</a></li>
             <li><a href="pages/contact">Contact</a></li>
             <li><a href="pages/blog">Blog</a></li>
             <li><a href="pages/projects">Projects</a></li>
